2004-12-15  Massimiliano Mantione  <massi@ximian.com>

	* mini.c: Fixed a subtle bug in mono_method_to_ir, about the
	linking of BBs to the end BB, and enabled SSAPRE also with
	consprop and copyprop (which was prevented by that bug).

2004-12-14  Patrik Torstensson  <patrik.torstensson@gmail.com>

	* mini-x86.c: disabling the Interlocked optimizing code. 

2004-12-14  Zoltan Varga  <vargaz@freemail.hu>

	* aot.c (load_aot_module): Move reading of got_addr after the AOT
	file version check.
	
2004-12-14  Patrik Torstensson  <patrik.torstensson@gmail.com>

	* mini-x86.c, inssel-x86.brg, cpu-pentium.md: removed _imm 
	interlocked optimization due lack of support on x86, rewrote 
	exchange to take into account that base may be in eax.
	
	xsp works again; activated Interlocked optimizing code.
	
2004-12-14  Zoltan Varga  <vargaz@freemail.hu>

	* mini.h (MONO_AOT_FILE_VERSION): Bump AOT file version.

2004-12-13  Zoltan Varga  <vargaz@freemail.hu>

	* mini-ops.h: Add new opcodes.

	* mini.h: Add new patch types. Add got_var to MonoCompile.

	* mini.h mini-x86.c mini-amd64.c aot.c: Rename 
	mono_arch_get_aot_patch_offset () to mono_arch_get_patch_offset () and
	make it work with all kinds of patchable code.

	* inssel.brg inssel-x86.brg: Add new rules dealing with computing the
	address of the GOT, and referencing entries in the GOT.

	* mini.c: Add code to load the GOT address if needed by an opcode.

	* aot.c mini-x86.h mini-x86.c cpu-pentium.md: Add support for position 
	independent AOT code on the x86 using an elf-style Global Offset Table.

2004-12-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (RUNTIME): Set MONO_SHARED_DIR.

2004-12-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mini-x86.c: disabling the Interlocked optimizing code. It segfaults
	when running xsp.

2004-12-13  Patrik Torstensson  <patrik.torstensson@gmail.com>

	* mini-x86.c,mini-ops.h,inssel-x86.brg,cpu-pentium.md: Implementation