@@ -714,8 +714,9 @@ reg: OP_X86_TLS_GET {
 	mono_bblock_add_inst (s->cbb, tree);
 }
 
+reg: OP_ATOMIC_ADD_NEW_I4 (base, reg),
 reg: OP_ATOMIC_ADD_I4 (base, reg) {
-	tree->opcode = OP_ATOMIC_ADD_I4;
+	tree->opcode = tree->opcode;
 	tree->inst_basereg = state->left->tree->inst_basereg; 
 	tree->inst_offset = state->left->tree->inst_offset; 
 	tree->dreg = state->reg1;
